--- a/index.html
+++ b/index.html
@@ -188,11 +188,12 @@
         <h1 class="pop-text-4">Popular Items</h1>
        
         <p class="pop-p-4">Consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna  <br> aliqua. Quis ipsum suspendisse ultrices gravida.
+        ut labore et dolore magna  <br> aliqua. Quis ipsum suspeendisse ultrices gravida.
        </p>
 
 
 <div class="div-for-pop-img4">
+
 
 
 <div class="div-for-img-text4">
