--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <div class="links">
 
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
+        <a href="./index.html">Home</a>
+        <a href="./shop.html">Shop</a>
         <a href="#">About</a>
         <a href="#">Latest</a>
         <a href="#">Blog</a>
@@ -188,12 +188,11 @@
         <h1 class="pop-text-4">Popular Items</h1>
        
         <p class="pop-p-4">Consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna  <br> aliqua. Quis ipsum suspeendisse ultrices gravida.
+        ut labore et dolore magna  <br> aliqua. Quis ipsum suspendisse ultrices gravida.
        </p>
 
 
 <div class="div-for-pop-img4">
-
 
 
 <div class="div-for-img-text4">
@@ -241,5 +240,7 @@
 
 
 
+
+    <script src="./main.js"></script>
 </body>
 </html>
